# purpl-engine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gn  BUILD.gn  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE_TEMPLATE  LICENSE_TEMPLATE.txt  README.md  azure-pipelines.yml  build.bfg  config.lua  meson.build  meson_options.txt  options.bfg  premake5.lua  purpl.sln  vcpkg.json
.github/workflows/: main.yml
cmake/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  MinGW.cmake  Platform.cmake  SDKs.cmake  Shader.cmake  Util.cmake  WinRT.cmake
common/: CMakeLists.txt  common.h  common.vcxproj  common.vcxproj.filters  dll.c  dll.h  gameinfo.c  gameinfo.h  ini.c  ini.h  pack.c  pack.h  premake5.lua  util.c  util.h
common/linux/: dll.c
common/windows/: dll.c
demo/: BUILD.gn  CMakeLists.txt  Package.appxmanifest.in  build.bfg  main.cc  meson.build  purpl-demo.rc.in  purpl-demo.sh.in  run.sh
demo/android/: Android.mk.in  AndroidManifest.xml.in  strings.xml.in
demo/android/src/: Entry.java.in
demo/src/: main.c
demo/uwp/: Package.appxmanifest.in  create_test_cert.ps1.in
engine/: BUILD.gn  CMakeLists.txt  build.bfg  dx_device.c  dx_main.c  dx_stuff.h  engine.c  engine.h  engine.vcxproj  engine.vcxproj.filters  globals.h  main.c  meson.build  premake5.lua  render.c  render.h  scene.h  vk_device.c  vk_glad.c  vk_glad.h  vk_main.c  vk_stuff.h
engine/include/purpl/: purpl.h
engine/include/purpl/core/: config.h.in  coredefs.h  features.h  init.h  inst.h  log.h  platform.h  swift.h  types.h  warnings.h
engine/include/purpl/graphics/: api.h  context.h  detect.h  graphics.h  init.h  inst_data.h  vulkan.h  window.h
engine/include/purpl/graphics/metal/: init.h
engine/include/purpl/graphics/private/: callbacks.h
engine/include/purpl/graphics/vulkan/: command.h  context.h  debug.h  device.h  draw.h  init.h  inst.h  inst_data.h  logical_device.h  misc.h  pipeline.h  render.h  surface.h  swapchain.h  sync.h
engine/include/purpl/util/: discord.h  error.h  fs.h  misc.h  parallel.h  string.h  util.h
engine/include/purpl/util/private/win/: ntdll.h  pe.h
engine/src/: engine.aps  engine.rc
engine/src/core/: globals.c  init.c  init.cc  inst.cc  log.c  main.c  preinit.c  preinit.cc
engine/src/graphics/: callbacks.c  context.c  detect.c  init.c  util.cc  window.c  window.cc
engine/src/graphics/metal/: init.swift
engine/src/graphics/shaders/: triangle.frag  triangle.vert
engine/src/graphics/vulkan/: command.c  context.c  debug.c  device.c  draw.c  init.c  inst.c  logical_device.c  misc.c  pipeline.c  render.c  surface.c  swapchain.c  sync.c
engine/src/util/: discord.c  error.c  fs.c  misc.c  parallel.c  stb.c  string.c
engine/src/util/arm/: random_64.S
engine/src/util/win/: ntdll.c  pe.c
engine/src/util/x86/: random_64.S  random_64.asm  random_64_mac.S  random_64_mingw.S
game/data/core/: game.ini
game/data/purpl/: game.ini
gdk/: MicrosoftGame.Config  grdk_toolchain.cmake  gxdk_toolchain.cmake  gxdk_xs_toolchain.cmake
githooks/: pre-push
gn/: BUILD.gn  BUILDCONFIG.gn
gn/toolchain/: BUILD.gn
launcher/: CMakeLists.txt  launcher.vcxproj  launcher.vcxproj.filters  main.c  premake5.lua
subprojects/: sdl2.wrap
tools/: buildcmd.bat  buildenv.bat  copydlls.bat  ddos.bat  ddos.sh  deps.py  dos2unix  dos2unix.freebsd  dos2unix.linux  dumpelf.py  dumpexports.py  dumpmacho.py  dumppe.py  fixperms.sh  glslc.linux  gn.mac  installvulkan.bat  makemsixvc.bat  mkdlldef.bat  mkprojects.bat  nasm.linux  nasm.mac  ninja  ninja.mac  openprojects.bat  patchelf  premake5  premake5.lua  premake5.macosx  purpl-demo.bat  refreshenv.bat  rmbuild.bat  run.bat  run.sh  search.bat  setup.bat  touch.bat  updatesubmodules.bat  updatesubmodules.sh
tools/chocoscripts/: Get-EnvironmentVariable.ps1  Get-EnvironmentVariableNames.ps1  README.txt  Update-SessionEnvironment.ps1  Write-FunctionCallLogMessage.ps1
tools/paktool/: CMakeLists.txt  main.c  premake5.lua
util/: setup-deps.py
