#  Targets for the main engine library
#
#  Copyright 2021 MobSlicer152
#  This file is part of Purpl Engine
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

shared_library("engine") {
  include_dirs = [
    "//deps/cglm/include",
    "//deps/glew/include",
    "//deps/sdl2/include",
    "include",
  ]

  lib_dirs = [ "//deps/build/" ]
  defines = [ "PURPL_BUILD" ]
  ldflags = []

  sources = [
    "include/core/coredefs.h",
    "include/core/features.h",
    "include/core/types.h",
    "include/util/string.h",
    "include/util/util.h",
    "src/core/init.c",
    "src/util/string.c",
  ]

  if (current_cpu == "x64") {
    defines += [
      "PURPL_X86=1",
      "PURPL_X86_64=1",
    ]
  } else if (current_cpu == "x86") {
    defines += [ "PURPL_X86=1" ]
  }
}
