#  Targets for the main engine library
#
#  Copyright 2022 MobSlicer152
#  This file is part of Purpl Engine
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

shared_library("engine") {
  include_dirs = [
    "//deps/include",
    "include",
  ]

  lib_dirs = [ "//deps/bin/" ]
  defines = [ "PURPL_BUILD" ]
  ldflags = []

  sources = [
    "include/purpl/core/coredefs.h",
    "include/purpl/core/features.h",
    "include/purpl/core/init.h",
    "include/purpl/core/inst.h",
    "include/purpl/core/log.h",
    "include/purpl/core/types.h",
    "include/purpl/util/string.h",
    "include/purpl/util/util.h",

    "include/purpl/graphics/context.h",
    "include/purpl/graphics/vulkan/context.h",
    "include/purpl/graphics/vulkan/misc.h",

    "include/util/string.h",
    "include/util/util.h",
    
    "src/core/globals.c",
    "src/core/init.c",
    "src/core/log.c",
    
    "src/graphics/context.c",
    "src/graphics/vulkan/context.c",
    "src/graphics/vulkan/misc.c",
    
    "src/util/stb.c",
    "src/util/string.c",
  ]

  if (current_cpu == "x64") {
    defines += [
      "PURPL_X86=1",
      "PURPL_X86_64=1",
    ]
  } else if (current_cpu == "x86") {
    defines += [ "PURPL_X86=1" ]
  } else if (current_cpu == "arm64") {
    defines += [ "PURPL_ARM=1" ]
  }

  if (enable_meming) {
    defines += [ "PURPL_ENABLE_MEMING=1" ]
  }

  if (verbose_log) {
    defines += [ "PURPL_DEBUG_VERBOSE_LOG=1" ]
  }

  if (is_win) {
    libs = ["clgm.lib", "glew32.lib", "SDL2.lib"]
  } else {
    libs = ["cglm", "GLEW", "SDL2-2.0"]
  }
}
